--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <noscript>this website requires javascript to work</noscript>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
